# cppcourse

./: .gitignore  README.md
labs/week2/: CMakeLists.txt  main.cpp  point2D.cpp  point2D.h  point3D.cpp  point3D.h  triangle.cpp  triangle.h
labs/week2/array_class/: CMakeLists.txt  array.cpp  array.h  main.cpp
labs/week2/stack/: CMakeLists.txt  main.cpp  stack.cpp  stack.h
labs/week3/calculator/: CMakeLists.txt  calculator.h
labs/week3/calculator/operators/: abstract_operator.cpp  abstract_operator.h  add.h  divide.cpp  divide.h  multiply.h  substract.cpp  substract.h
labs/week3/chess/: CMakeLists.txt  board.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h
labs/week3/deque/: CMakeLists.txt  deque.h
labs/week3/queue/: CMakeLists.txt
labs/week3/singleton/: CMakeLists.txt  main.cpp  singleton.cpp  singleton.h
week1/array-replace/: CMakeLists.txt  main.cpp
week1/circle/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
week1/distance/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
week1/matrix/: CMakeLists.txt  main.cpp
week1/series/: CMakeLists.txt  main.cpp
week1/spell-number/: CMakeLists.txt  main.cpp  spelling.cpp  spelling.h
week2/all_positive/: CMakeLists.txt  main.cpp
week2/array_concat/: CMakeLists.txt  main.cpp
week2/circle/: CMakeLists.txt  main.cpp
week2/equations/: CMakeLists.txt  main.cpp
week2/first_task/: CMakeLists.txt  main.cpp
week4/calculator/: CMakeLists.txt  calc.cpp  calc.h  main.cpp  operators.cpp  operators.h
week5/tictactoe/: CMakeLists.txt  main.cpp  tictactoe.cpp  tictactoe.h
(+4 files in other folders)
